--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lesson4b",
+  "name": "lesson5",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -31,10 +31,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/komaldeep1124/lesson4b_week4.git"
+    "url": "git+https://github.com/komaldeep1124/lesson5.git"
   },
   "bugs": {
-    "url": "https://github.com/komaldeep1124/lesson4b_week4/issues"
+    "url": "https://github.com/komaldeep1124/lesson5/issues"
   },
-  "homepage": "https://github.com/komaldeep1124/lesson4b_week4#readme"
+  "homepage": "https://github.com/komaldeep1124/lesson5#readme"
 }
