--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lesson5",
+  "name": "lesson6",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,15 +11,20 @@
   },
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
     "mongoose": "^5.4.10",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "popper.js": "^1.14.7"
   },
   "description": "Mongo and Mongoose demo",
@@ -27,14 +32,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/mongoose": "^5.3.12"
+    "@types/connect-flash": "0.0.34",
+    "@types/express-session": "^1.15.12",
+    "@types/mongoose": "^5.3.12",
+    "@types/passport": "^1.0.0",
+    "@types/passport-local-mongoose": "^4.0.12"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/komaldeep1124/lesson5.git"
+    "url": "git+https://github.com/komaldeep1124/lesson6.git"
   },
   "bugs": {
-    "url": "https://github.com/komaldeep1124/lesson5/issues"
+    "url": "https://github.com/komaldeep1124/lesson6/issues"
   },
-  "homepage": "https://github.com/komaldeep1124/lesson5#readme"
+  "homepage": "https://github.com/komaldeep1124/lesson6#readme"
 }
